--- a/landingpage/FAQ.html
+++ b/landingpage/FAQ.html
@@ -31,14 +31,14 @@
 
         <!-- Menu Links -->
         <ul class="absolute top-5 left-0 w-full p-8 list-none flex flex-row items-center justify-center gap-8">
-            <li><a href="#" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
+            <li><a href="firstpage.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
             <li><a href="aboutus.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">About Us</a></li>
             <li><a href="#" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Contact</a></li>
             <li><a href="FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">FAQ</a></li>
         </ul>
 
         <!-- Buttons -->
-        <div class="flex flex-1 space-x-2">
+        <div class="flex flex-1 space-x-2 z-20">
             <a href="/register/register.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
                 Sign Up
             </a>
