--- a/landingpage/aboutus.html
+++ b/landingpage/aboutus.html
@@ -46,7 +46,7 @@
   </style>
 </head>
 <body>
-    <nav class="sticky isolate w-full z-9 font-normal py-8 mx-auto flex items-center justify-between pr-48 pl-48">
+    <nav class="sticky isolate w-full font-normal py-8 mx-auto flex items-center justify-between pr-48 pl-48">
         <div class="flex items-center justify-between w-full">
             <div class="nav__logo">
                 <a href="#">
@@ -67,14 +67,11 @@
         </ul>
 
         <!-- Buttons -->
-        <div class="flex flex-1 space-x-2">
-            <a href="/register/register.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
-                Sign Up
-            </a>
-            <a href="/login/login.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-[#b00404] transition duration-300" style="background-color:#d60505;">
-                Sign In
-            </a>
-        </div>
+        <ul class="flex flex-1 top-5 p-5 z-20">
+            <li><a href="/register/register.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">Sign Up</a></li>
+            
+            <li><a href="/login/login.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-[#b00404] transition duration-300" style="background-color:#d60505;">Sign In</a></li>
+        </ul>
     </nav>
 
     <div class="text-white mt-20" style="background-color:#d60505;">
@@ -136,7 +133,7 @@
                 </div>
             </div>
             <div class="text-left pl-32">
-                <div class="text-xl md:text-2xl font-bold mb-4 text-red-700">
+                <div class="text-xl md:text-2xl font-bold mb-4 text-blue-700">
                     Search for Sports Facilities:
                 </div>
                 <p class="text-lg mb-4">
@@ -152,7 +149,7 @@
     </div>
 
     <!-- Tambahkan Bagian Baru di Sini -->
-    <div class="text-black bg-gray-100 mt-20">
+    <div class="text-black bg-gray-100 mt-20 mb-24">
         <div class="text-center mb-8">
             <div class="text-xl md:text-2xl font-bold">
                 Community Anywhere
@@ -196,12 +193,12 @@
     </div>
     <!-- Akhir Bagian Baru -->
 </body>
-<footer class="bg-white">
+<footer style="background-color: #d60505;">
     <div class="mx-auto w-full max-w-screen-xl">
       <div class="grid grid-cols-2 gap-8 px-4 py-6 lg:py-8 md:grid-cols-3">
         <div>
             <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Contact us</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
+            <ul class="text-white font-medium">
                 <li class="mb-4">
                     <a href="#" class=" hover:underline">About</a>
                 </li>
@@ -212,7 +209,7 @@
         </div>
         <div>
             <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Follow Us</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
+            <ul class="text-white font-medium">
                 <li class="mb-4">
                     <a href="#" class="hover:underline">Instagram</a>
                 </li>
@@ -229,7 +226,7 @@
         </div>
         <div>
             <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Location</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
+            <ul class="text-white font-medium">
                 <li class="mb-4">
                     <a href="#" class="hover:underline">Jl.Majalaya</a>
                 </li>
