--- a/rewards/rewards.html
+++ b/rewards/rewards.html
@@ -174,7 +174,18 @@
    <main class="pt-20 pb-20">
       <div class="flex justify-end">
          <!-- Main Content -->
-         <div class="lg:w-3/5 md:w-3/5 p-4 ">
+         <div class=" bg-white lg:w-3/5 md:w-3/5 p-4 ">
+            <div class="bg-red-700 p-2 rounded-lg relative">
+               <div class="relative p-4 ">
+                   <div class="bg-yellow-400 w-32 rounded-lg p-1 z-10 absolute top-2 left-20 transform -translate-x-1/2">
+                       <p class="text-white text-xl font-bold text-center">poin kamu</p>
+                   </div>
+                   <div class="bg-white w-32 h-20 rounded-lg p-1 flex items-center justify-center mt-4">
+                        <i class="fi fi-rs-coins p-1 text-yellow-500 text-2xl"></i>
+                       <p class="text-yellow-500 text-2xl font-bold text-center">350</p>
+                   </div>
+               </div>
+           </div>
          </div>
 
          <div class="lg:w-1/5 md:w-1/4 sm:w-full p-4">
