--- a/login/login.html
+++ b/login/login.html
@@ -42,7 +42,7 @@
         <hr>
         <p class="signup-text">Dont Have An Account Yet? <a href="/register/register.html">Sign Up Here</a></p>
 
-        <p class="forgot-password"><a href="/fotgotpw/forgotpw.html">Forgot Password?</a></p>
+        <p class="forgot-password"><a href="../forgotpw/forgotpw.html">Forgot Password?</a></p>
     </div>
 </body>
 
