--- a/komunitas/komunitas.html
+++ b/komunitas/komunitas.html
@@ -194,7 +194,7 @@
                </a>
             </li>
             <li>
-               <a href="/komunitas/komunitas.html" class="flex items-center w-full p-2 text-base text-white bg-red-600 hover:bg-red-600 hover:text-white duration-75 rounded-lg group" 
+               <a href="#" class="flex items-center w-full p-2 text-base text-white bg-red-600 hover:bg-red-600 hover:text-white duration-75 rounded-lg group" 
                   aria-controls="dropdown-example" 
                   data-collapse-toggle="dropdown-example">
                   <i class="fi fi-rs-users-alt"></i>   
