--- a/fields/detail-field.html
+++ b/fields/detail-field.html
@@ -288,7 +288,12 @@
                   <h2 class="font-semibold text-md">Location</h2>
                </div>
                <p class="text-justify mb-4">Jl. Terusan Buah Batu No.333, Cipagalo, Kec. Bojongsoang, Kabupaten Bandung, Jawa Barat 40287</p>
-               <a href="https://maps.app.goo.gl/jNWsvJqY4ZeKarXM7" class="bg-gray-700 text-white text-decoration-none p-2 rounded-lg my-2 hover:bg-gray-100 hover:text-gray-900">click here</a>
+               <iframe class="w-full h-72 mt-4 rounded-b-lg" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.348555666975!2d107.63460157317974!3d-6.968143468224553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e9ba8f17fc29%3A0x7a6bd5f13e17fcde!2sFutsal%20Yogya%20Bojongsoang!5e0!3m2!1sid!2sid!4v1736135325771!5m2!1sid!2sid" 
+                  style="border:0;"
+                  allowfullscreen="" 
+                  loading="lazy" 
+                  referrerpolicy="no-referrer-when-downgrade">
+               </iframe>
            </div>
             <!-- Review -->
             <section class="bg-white p-4 rounded-lg shadow mb-4" id="rating">
