bismillah dikit lagi

--- a/landingpage/FAQ.html
+++ b/landingpage/FAQ.html
@@ -33,8 +33,7 @@
         <ul class="absolute top-5 left-0 w-full p-8 list-none flex flex-row items-center justify-center gap-8">
             <li><a href="firstpage.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
             <li><a href="aboutus.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">About Us</a></li>
-            <li><a href="#" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Contact</a></li>
-            <li><a href="FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">FAQ</a></li>
+            <li><a href="FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Help</a></li>
         </ul>
 
         <!-- Buttons -->
@@ -47,12 +46,12 @@
             </a>
         </div>
     </nav>
-    <div class="container mx-auto p-8">
+    <div class="container mx-auto p-8 pl-48 pr-48">
         <h1 class="text-3xl font-bold mb-6 text-center">Frequently Asked Questions</h1>
 
         <div class="bg-white shadow-md rounded-lg p-6 mb-4">
         <div class="flex justify-between items-center">
-            <h2 class="text-xl font-semibold">Apa itu Sports Space?</h2>
+            <h2 class="text-lg font-semibold">Apa itu Sports Space?</h2>
             <button onclick="toggleFAQ('faq1')" class="text-gray-500 focus:outline-none">
             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
@@ -66,7 +65,7 @@
 
         <div class="bg-white shadow-md rounded-lg p-6 mb-4">
         <div class="flex justify-between items-center">
-            <h2 class="text-xl font-semibold">Bagaimana cara menggunakan Sports Space?</h2>
+            <h2 class="text-lg font-semibold">Bagaimana cara menggunakan Sports Space?</h2>
             <button onclick="toggleFAQ('faq2')" class="text-gray-500 focus:outline-none">
             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
@@ -80,7 +79,7 @@
 
         <div class="bg-white shadow-md rounded-lg p-6 mb-4">
         <div class="flex justify-between items-center">
-            <h2 class="text-xl font-semibold">Apakah aplikasi ini gratis?</h2>
+            <h2 class="text-lg font-semibold">Apakah aplikasi ini gratis?</h2>
             <button onclick="toggleFAQ('faq3')" class="text-gray-500 focus:outline-none">
             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
@@ -94,7 +93,7 @@
 
         <div class="bg-white shadow-md rounded-lg p-6 mb-4">
         <div class="flex justify-between items-center">
-            <h2 class="text-xl font-semibold">Bagaimana cara menghubungi dukungan?</h2>
+            <h2 class="text-lg font-semibold">Bagaimana cara menghubungi dukungan?</h2>
             <button onclick="toggleFAQ('faq4')" class="text-gray-500 focus:outline-none">
             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
@@ -108,7 +107,7 @@
 
         <div class="bg-white shadow-md rounded-lg p-6 mb-4">
         <div class="flex justify-between items-center">
-            <h2 class="text-xl font-semibold">Apakah data saya aman?</h2>
+            <h2 class="text-lg font-semibold">Apakah data saya aman?</h2>
             <button onclick="toggleFAQ('faq5')" class="text-gray-500 focus:outline-none">
             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
