--- a/profile/profile.html
+++ b/profile/profile.html
@@ -305,9 +305,11 @@
                                 <p class="font-semibold">Football</p>
                             </div>
                             </div>
-                                <button class="mt-4 px-6 py-2 bg-red-500 text-white rounded-full hover:bg-red-700">
-                                    EDIT PROFIL
-                                </button>
+                                 <a href="editProfile.html"> 
+                                    <button class="mt-4 px-6 py-2 bg-red-600 text-white rounded-md hover:bg-red-700">
+                                    Edit Profil
+                                    </button>
+                                 </a>
                             </div>
                         </div>
                     </div>
