bismilah lagi bale

--- a/landingpage/FAQ.html
+++ b/landingpage/FAQ.html
@@ -38,10 +38,10 @@
 
         <!-- Buttons -->
         <div class="flex flex-1 space-x-2 z-20">
-            <a href="/register/register.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
+            <a href="/register/registerNew.html class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
                 Sign Up
             </a>
-            <a href="/login/login.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-[#b00404] transition duration-300" style="background-color:#d60505;">
+            <a href="/login/loginNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-[#b00404] transition duration-300" style="background-color:#d60505;">
                 Sign In
             </a>
         </div>
