--- a/landingpage/aboutus.html
+++ b/landingpage/aboutus.html
@@ -67,9 +67,9 @@
 
         <!-- Buttons -->
         <ul class="flex flex-1 top-5 p-5 z-20">
-            <li><a href="/register/register.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">Sign Up</a></li>
+            <li><a href="/register/registerNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">Sign Up</a></li>
             
-            <li><a href="/login/login.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-[#b00404] transition duration-300" style="background-color:#d60505;">Sign In</a></li>
+            <li><a href="/login/loginNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-[#b00404] transition duration-300" style="background-color:#d60505;">Sign In</a></li>
         </ul>
     </nav>
 
