--- a/register/registerNew.html
+++ b/register/registerNew.html
@@ -31,10 +31,10 @@
   
         <!-- Menu Links -->
         <ul class="absolute top-5 left-0 w-full p-8 list-none flex flex-row items-center justify-center gap-8">
-            <li><a href="firstpage.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
-            <li><a href="aboutus.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">About Us</a></li>
+            <li><a href="../landingpage/firstpage.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
+            <li><a href="../landingpage/aboutus.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">About Us</a></li>
             <li><a href="#" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Contact</a></li>
-            <li><a href="FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">FAQ</a></li>
+            <li><a href="../landingpage/FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">FAQ</a></li>
         </ul>
   
         <!-- Buttons -->
@@ -42,7 +42,7 @@
             <a href="/register/register.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
                 Sign Up
             </a>
-            <a href="/login/login.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-red-800 transition duration-300" style="background-color:#d60505;">
+            <a href="/login/loginNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-red-800 transition duration-300" style="background-color:#d60505;">
                 Sign In
             </a>
         </div>
