beneran dikit lagi

--- a/komunitas/komunitas.html
+++ b/komunitas/komunitas.html
@@ -185,7 +185,7 @@
    
    <aside id="logo-sidebar" class="fixed top-0 left-6 z-40 w-64 h-[87vh] pt-20 transition-transform -translate-x-full bg-white border-r sm:translate-x-0" aria-label="Sidebar">
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
-         <ul class="space-y-2 font-medium">
+         <ul class="space-y-2 text-sm">
             <li>
                <a href="/dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
                   <i class="fi fi-rs-home">
@@ -193,8 +193,9 @@
                   <span class="ms-3">Dashboard</span>
                </a>
             </li>
+
             <li>
-               <a href="#" class="flex items-center w-full p-2 text-base text-white bg-red-600 hover:bg-red-600 hover:text-white duration-75 rounded-lg group" 
+               <a href="/komunitas/komunitas.html" class="flex items-center w-full p-2 text-base text-white bg-red-600 hover:bg-red-600 hover:bg-red-600 hover:text-white duration-75 rounded-lg group" 
                   aria-controls="dropdown-example" 
                   data-collapse-toggle="dropdown-example">
                   <i class="fi fi-rs-users-alt"></i>   
@@ -205,10 +206,10 @@
                </a>
                <ul id="dropdown-example" class="hidden py-2 space-y-2">
                      <li>
-                        <a href="myKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 transition duration-75 rounded-lg pl-11">My Community</a>
+                        <a href="/komunitas/myKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 transition duration-75 rounded-lg pl-11">My Community</a>
                      </li>
                      <li>
-                        <a href="/komunitas/addKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 transition duration-75 rounded-lg pl-11">Add Community</a>
+                        <a href="/komunitas/addKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 hover:text-white transition duration-75 rounded-lg pl-11">Add Community</a>
                      </li>
                </ul>
             </li>
@@ -233,29 +234,30 @@
                   });
                });
             </script>
-
-            <li>
-               <a href="/fields/fields.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+            
+            
+   
+               <a href="/fields/fields.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
                   <i class="fi fi-rs-court-sport">
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Field</span>
                </a>
             </li>
             <li>
-               <a href="/rewards/rewards.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/rewards/rewards.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
                   <i class="fi fi-rs-trophy-star"></i>
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Reward</span>
                </a>
             </li>
             <li>
-               <a href="/sports-group/sports-group.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/sports-group/sports-group.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
                   <i class="fi fi-rs-two-swords"></i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Sports Group</span>
                </a>
             </li>
             <li>
-               <a href="/profile/profile.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/profile/profile.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
                   <i class="fi fi-rs-user">
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Profile</span>
