--- a/profile/profile.html
+++ b/profile/profile.html
@@ -205,7 +205,7 @@
                </a>
                <ul id="dropdown-example" class="hidden py-2 space-y-2">
                      <li>
-                        <a href="#" class="flex items-center w-full p-2 text-black hover:bg-red-600 transition duration-75 rounded-lg pl-11">My Community</a>
+                        <a href="/komunitas/myKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 transition duration-75 rounded-lg pl-11">My Community</a>
                      </li>
                      <li>
                         <a href="/komunitas/addKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 hover:text-white transition duration-75 rounded-lg pl-11">Add Community</a>
@@ -243,7 +243,7 @@
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
+               <a href="/rewards/rewards.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
                   <i class="fi fi-rs-trophy-star"></i>
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Reward</span>
@@ -256,7 +256,7 @@
                </a>
             </li>
             <li>
-               <a href="/profile/profile.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
+               <a href="/profile/profile.html" class="flex items-center p-2 text-white bg-red-600 rounded-lg hover:bg-red-600 hover:text-white group">
                   <i class="fi fi-rs-user">
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Profile</span>
