--- a/komunitas/detailKomunitas.html
+++ b/komunitas/detailKomunitas.html
@@ -6,6 +6,7 @@
   <title>Sports Space</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-straight/css/uicons-regular-straight.css'>
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
@@ -321,6 +322,9 @@
                                 <div>
                                     <p class="font-medium">Wiyah</p>
                                     <p class="text-gray-500 text-sm">Online 3 hours ago</p>
+                                </div>
+                                <div class="ml-4">
+                                 <i class="fa-solid fa-user-plus"></i>
                                 </div>
                                 </li>
                                 
